--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
 	"dependencies": {
 		"jquery": "~2.2.4",
 		"normalize-css": "~2.3.1",
-		"vue": "^2.3.3",
-		"vue-router": "^2.5.3"
+		"vue": "~2.3.3",
+		"vue-router": "~2.5.3"
 	},
 	"devDependencies": {
-		"neutrino-preset-fabrika": "^1.0.0"
+		"neutrino-preset-fabrika": "git://github.com/fabrikaodua/neutrino-preset-fabrika"
 	},
 	"engines": {
 		"node": ">=6.9.0",
