--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
 language: node_js
-cache:
-  directories:
-  - node_modules
 node_js:
   - "6.9"
 install:
   - npm install
+cache:
+  directories:
+  - node_modules
 # before_script:
 script:
   - npm run lint
   - npm test
+notifications:
+    slack: 
+      on_pull_requests: false
+      rooms:
+        - fabrikafrontend:Rj7FzEUdapSihjbouEbWzkmf
+      on_success: change # default: always
+      on_failure: change # default: always
