--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
 		"vue-router": "~2.5.3"
 	},
 	"devDependencies": {
+		"stylelint": "7.11.0",
+		"stylelint-config-standard": "16.0.0",
 		"neutrino-preset-fabrika": "git://github.com/fabrikaodua/neutrino-preset-fabrika"
 	},
 	"engines": {
