Add precommit and prepush hooks

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
 		"test": "neutrino test",
 		"test:watch": "neutrino test --watch",
 		"coverage": "neutrino test --coverage",
-		"lint": "eslint --ext .js,.jsx,.html src/"
+		"lint": "eslint --ext .js,.jsx,.html src/",
+		"precommit": "npm run lint",
+		"prepush": "npm test"
 	},
 	"neutrino": {
 		"use": [
@@ -38,7 +40,8 @@
 	"devDependencies": {
 		"stylelint": "7.11.0",
 		"stylelint-config-standard": "16.0.0",
-		"neutrino-preset-fabrika": "git://github.com/fabrikaodua/neutrino-preset-fabrika"
+		"neutrino-preset-fabrika": "git://github.com/fabrikaodua/neutrino-preset-fabrika",
+		"husky": "0.13.4"
 	},
 	"engines": {
 		"node": ">=6.9.0",
