--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,13 @@ cache:
 script:
   - npm test
   - npm run build
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
+  local_dir: build
+  on:
+    branch: master
 notifications:
     slack: 
       on_pull_requests: false
