--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,45 +1,46 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-	"editor.insertSpaces": false,
-	"editor.detectIndentation": false,
-	"editor.wordWrap": "on",
-	"files.autoSave": "onFocusChange",
-	"jshint.enable": false,
-	"eslint.autoFixOnSave": true,
-	"editor.formatOnSave": true,
-	"javascript.format.enable": true,
-	"javascript.validate.enable": false,
-	"stylelint.configOverrides": {
-		"fix": true
-	},
-	"eslint.validate": [
-		{
-			"language": "html",
-			"autoFix": true
-		},
-		{
-			"language": "javascript",
-			"autoFix": true
-		},
-		{
-			"language": "javascriptreact",
-			"autoFix": true
-		}
-	],
-	"eslint.options": {
-		"extensions": [
-			".html",
-			".js",
-			".vue",
-			".jsx"
-		]
-	},
-	"eslint.workingDirectories": [
-		"./src",
-		"./test"
-	],
-	"emmet.syntaxProfiles": {
-		"vue-html": "html",
-		"vue": "html"
-	}
+  "editor.insertSpaces": false,
+  "editor.detectIndentation": false,
+  "editor.wordWrap": "on",
+  "files.autoSave": "onFocusChange",
+  "files.eol": "\n",
+  "jshint.enable": false,
+  "eslint.autoFixOnSave": true,
+  "editor.formatOnSave": true,
+  "javascript.format.enable": true,
+  "javascript.validate.enable": false,
+  "stylelint.configOverrides": {
+    "fix": true
+  },
+  "eslint.validate": [
+    {
+      "language": "html",
+      "autoFix": true
+    },
+    {
+      "language": "javascript",
+      "autoFix": true
+    },
+    {
+      "language": "javascriptreact",
+      "autoFix": true
+    }
+  ],
+  "eslint.options": {
+    "extensions": [
+      ".html",
+      ".js",
+      ".vue",
+      ".jsx"
+    ]
+  },
+  "eslint.workingDirectories": [
+    "./src",
+    "./test"
+  ],
+  "emmet.syntaxProfiles": {
+    "vue-html": "html",
+    "vue": "html"
+  }
 }
