Update stylelint config to 7.12.0

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,41 +1,45 @@
 {
-    "extends": "stylelint-config-standard",
-    "rules": {
-        "indentation": "tab",
-        "string-quotes": "single",
-        "no-duplicate-selectors": true,
-        "color-hex-case": "lower",
-        "color-hex-length": "short",
-        "selector-no-qualifying-type": true,
-        "selector-no-id": true,
-        "selector-combinator-space-after": "always",
-        "selector-attribute-quotes": "always",
-        "selector-attribute-operator-space-before": "never",
-        "selector-attribute-operator-space-after": "never",
-        "selector-attribute-brackets-space-inside": "never",
-        "declaration-block-trailing-semicolon": "always",
-        "declaration-no-important": true,
-        "declaration-colon-space-before": "never",
-        "declaration-colon-space-after": "always",
-        "property-no-vendor-prefix": null,
-        "value-no-vendor-prefix": true,
-        "number-leading-zero": "always",
-        "function-url-quotes": "never",
-        "function-url-data-uris": "never",
-        "font-family-name-quotes": "always-where-recommended",
-        "comment-whitespace-inside": "always",
-        "comment-empty-line-before": "always",
-        "at-rule-no-vendor-prefix": true,
-        "selector-pseudo-element-colon-notation": "double",
-        "selector-pseudo-class-parentheses-space-inside": "never",
-        "selector-no-vendor-prefix": true,
-        "selector-no-universal": true,
-        "media-feature-range-operator-space-before": "always",
-        "media-feature-range-operator-space-after": "always",
-        "media-feature-parentheses-space-inside": "never",
-        "media-feature-name-no-vendor-prefix": true,
-        "media-feature-colon-space-before": "never",
-        "media-feature-colon-space-after": "always",
-		  "no-missing-end-of-source-newline": null
-    }
+	"extends": "stylelint-config-standard",
+	"rules": {
+		"indentation": "tab",
+		"string-quotes": "single",
+		"no-duplicate-selectors": true,
+		"selector-no-qualifying-type": true,
+		"selector-max-id": 0,
+		"selector-max-universal": 0,
+		"selector-attribute-quotes": "always",
+		"selector-no-vendor-prefix": true,
+		"selector-pseudo-class-blacklist": [
+			"not",
+			"matches"
+		],
+		"selector-class-pattern": "^[a-z\\-]+$",
+		"selector-max-compound-selectors": 7,
+		"declaration-no-important": true,
+		"declaration-block-no-redundant-longhand-properties": null,
+		"property-no-vendor-prefix": null,
+		"value-no-vendor-prefix": true,
+		"value-keyword-case": "lower",
+		"function-url-quotes": "never",
+		"function-url-scheme-blacklist": [
+			"ftp",
+			"/^data/"
+		],
+		"font-family-name-quotes": "always-where-recommended",
+		"comment-whitespace-inside": "always",
+		"comment-empty-line-before": null,
+		"at-rule-no-vendor-prefix": true,
+		"media-feature-name-no-vendor-prefix": true,
+		"no-missing-end-of-source-newline": null,
+		"no-descending-specificity": true,
+		"custom-property-empty-line-before": null,
+		"max-nesting-depth": 2,
+		"unit-blacklist": [
+			"pt",
+			"cm",
+			"mm",
+			"pc",
+			"dpcm"
+		]
+	}
 }
