--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
 		]
 	},
 	"dependencies": {
-		"jquery": "~3.2.1",
-		"normalize-css": "~2.3.1",
-		"vue": "~2.4.1",
-		"vue-router": "^2.6.0"
+		"jquery": "3.2.1",
+		"normalize-css": "2.3.1",
+		"vue": "2.4.1",
+		"vue-router": "2.7.0"
 	},
 	"devDependencies": {
 		"husky": "0.14.3",
