Add Travis notification on pull requests

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ deploy:
     branch: master
 notifications:
     slack: 
-      on_pull_requests: false
+      on_pull_requests: true
       rooms:
         - fabrikafrontend:Rj7FzEUdapSihjbouEbWzkmf
       on_success: change # default: always
