--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 	},
 	"devDependencies": {
 		"husky": "0.14.3",
-		"neutrino-preset-fabrika": "git://github.com/fabrikaodua/neutrino-preset-fabrika.git",
+		"neutrino-preset-fabrika": "1.1.0",
 		"stylelint": "7.13.0",
 		"stylelint-config-standard": "17.0.0"
 	},
