--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
 	"dependencies": {
 		"jquery": "3.2.1",
 		"normalize-css": "2.3.1",
-		"vue": "2.4.1",
+		"vue": "*",
 		"vue-router": "2.7.0"
 	},
 	"devDependencies": {
 		"husky": "0.14.3",
 		"neutrino": "6.1.4",
-		"neutrino-preset-fabrika": "2.0.0",
+		"neutrino-preset-fabrika": "git://github.com/fabrikaodua/neutrino-preset-fabrika",
 		"eslint-plugin-vue": "*"
 	},
 	"engines": {
