--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 	"devDependencies": {
 		"husky": "0.14.3",
 		"neutrino": "6.1.4",
-		"neutrino-preset-fabrika": "git://github.com/fabrikaodua/neutrino-preset-fabrika",
+		"neutrino-preset-fabrika": "2.0.0",
 		"eslint-plugin-vue": "*"
 	},
 	"engines": {
