--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
 		"jquery": "3.2.1",
 		"normalize-css": "2.3.1",
 		"vue": "*",
-		"vue-router": "2.7.0"
+		"vue-router": "2.7.0",
+		"vue2-google-maps": "0.7.10"
 	},
 	"devDependencies": {
 		"husky": "0.14.3",
